--- a/index.html
+++ b/index.html
@@ -4,18 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Max Fausnight</title>
+    <title>Max Fausnight Portfolio</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
+
 <body>
     <!-- header -->
     <header>
+        <h1>
+            <a href="#">MAX FAUSNIGHT</a>
+        </h1>
+        <!-- Navigation Section -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contact-me">Contact-Me</a>
+                </li>
+                <li>
+                    <a href="#Resume">Resume</a>
+                </li>
+
+            </ul>   
+        </nav>
 
     </header>
 
     <!-- Subtitle -->
 
-    <section>
+    <section class="subtitle">
+        <h2>My Portfolio</h2>
 
     </section>
 
