--- a/index.html
+++ b/index.html
@@ -57,8 +57,33 @@
     </section>
 
     <!-- Work Start -->
-    <section>
+    <section id="work" class="work">
+        <div class="section-title">
+            <h2>Work</h2>
+        </div>
 
+        <div class="my-work">
+            <div class="run-buddy">
+                <h4>Run Buddy</h4>
+            </div>
+
+            <div class="robot-gladiators">
+                <h4>Robot Gladiators</h4>
+
+            </div>
+            <div class="calculator">
+                <h4>Calculator</h4>
+            </div>
+
+            <div class="pastel-puzzels">
+                <h4>Pastel Puzzels</h4>
+            </div>
+
+            <div class="led-wall">
+                <h4>LED Wall</h4>
+            </div>
+
+        </div>
     </section>
 
 
