updated readme file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         </div>
         <div class="summary">
             <p>
-                Max Fausnight is a full-stack web developer with expertise in Photoshop, Premiere, and After Effects. His background in hospitality inform his compassionate, people-first approach. <break>Max is fueled by an un-ending desire to learn and execute. Eager to build upon his entertainment background by staying in tune with ground breaking technologies like blockchain.</break> <break>His hunger to strive for excellence has lead him to build partnerships between his company's brand and major companies like the NFL. Meanwhile, Max continuously helps improve productivity and safety in a fast-paced environment. Max believes safety, and then people are the top priorities to successful business.</break>        </p>
+                Max Fausnight is a full-stack web developer with expertise in Adobe Photoshop, Premiere, and After Effects. His background in hospitality informs his compassionate, people-first approach. Max is fueled by an un-ending desire to learn and execute. </p>
+
+                <p>He is always eager to build upon his entertainment expertise by staying in tune with ground breaking technologies like blockchain. His hunger to strive for excellence has lead him to build partnerships between his company and major brands like the NFL. Meanwhile, Max continuously helps improve productivity in a fast-paced environment. Max believes quality people are the single greatest factor to successful business.</p>
         </div>
     </section>
 
@@ -66,7 +68,7 @@
 
             <div class="run-buddy">
 
-                    <a href="https://fausnightm.github.io/run_buddy/">Run Buddy</a>
+                    <a href="https://fausnightm.github.io/run_buddy/" alt="image of runner">Run Buddy</a>
             </div>
 
             <div class="sub-work">
@@ -74,18 +76,18 @@
                 <article>
                     <div class="robot-gladiators">
 
-                        <a href="https://fausnightm.github.io/robot-gladiators/">Robot Gladiators</a>
+                        <a href="https://fausnightm.github.io/robot-gladiators/" alt="image of robot">Robot Gladiators</a>
         
                     </div>
                     <div class="calculator">
-                        <a href="https://github.com/fausnightm">Calculator</a>
+                        <a href="https://fausnightm.github.io/Advanced-Refactoring/" alt="image of calculator">Advanced Refactoring</a>
                     </div>
 
                 </article>
 
                 <article>
                     <div class="pastel-puzzels">
-                        <a href="https://github.com/fausnightm">Pastel Puzzels</a>
+                        <a href="https://github.com/fausnightm" alt="image of puzzle">Pastel Puzzels</a>
                     </div>
         
                     <div class="led-wall">
