--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <article>
                     <div class="pastel-puzzels">
-                        <a href="https://github.com/fausnightm" alt="image of puzzle">Pastel Puzzels</a>
+                        <a href="https://awolrob.github.io/Project1/" alt="image of puzzle">Campground Search</a>
                     </div>
         
                     <div class="led-wall">
