Added Project 2 to my portfolio

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </div>
         
                     <div class="led-wall">
-                        <a href="https://github.com/fausnightm">Led Wall</a>
+                        <a href="https://github.com/Sethmarks216/project_2">Puparazzi</a>
                     </div>
 
                 </article>
